# ShareTest

MLnote/: helper.py  note.md
ManualWidget/: CMakeLists.txt  MainWindow.h  MdWindow.h  ModelMdReader.cpp  ModelMdReader.h  Section.h  ViewManual.cpp  ViewManual.h  cubicinterpolate.cpp  main.cpp  test.txt
ManualWidget/doc/: README.md
ManualWidget/doc/L3/: L3.md
ModelNpz/: CMakeLists.txt  ModelNpz.cpp  ModelNpz.h  build.sh  lena.npz  main.cpp  npz2gui.py  png2npz.py
ModelSktMsg/: CMakeLists.txt  ModelSktBase.cpp  ModelSktBase.h  ModelSktClnt.cpp  ModelSktClnt.h  ModelSktMsg.cpp  ModelSktMsg.h  ModelSktSvr.cpp  ModelSktSvr.h  SharedMemory.h  consumer.cpp  main.cpp  producer.cpp  socket_client.cpp  socket_client_batch.cpp  socket_server.cpp  socket_server_batch.cpp
ModelYmlParser/: CMakeLists.txt  ModelYmlParser.cpp  ModelYmlParser.h  ViewLyrRender.cpp  ViewYmlDisplay.cpp  ViewYmlDisplay.h  m.txt  main.cpp  test.yaml
OrderedTw/: CMakeLists.txt  TreeWidgetMover.cpp  TreeWidgetMover.h  main.cpp
SQLiteCpp/: build.sh
ViewLyrDialog/: CMakeLists.txt  ViewLyrDialog.cpp  ViewLyrDialog.h  main.cpp
ViewProductDialog/: .gitignore  CMakeLists.txt  ModelOvlConf.cpp  ModelOvlConf.h  ViewGaugeSetupDialog.cpp  ViewGaugeSetupDialog.h  ViewLytMergeDialog.cpp  ViewLytMergeDialog.h  ViewProductDialog.cpp  ViewProductDialog.h  build.sh  lcOvlProduct.cpp  lcOvlProduct.h  main.cpp  rcsv_table.ini  test.csv
ViewXmlWidget/: CMakeLists.txt  ModelXmlParser.cpp  ModelXmlParser.h  ViewXmlItems.cpp  ViewXmlItems.h  ViewXmlTab.cpp  ViewXmlTab.h  build.sh  lcXml.cpp  lcXml.h  main.cpp  test copy.xml  test.xml  test2.xml
cg/: note.md
cg/code/: Angle.cpp  Angle.h  BST.h  CMakeLists.txt  Convexhull.cpp  Convexhull.h  Core.h  GeoUtils.cpp  GeoUtils.h  Intersection.cpp  Intersection.h  KDTree.h  Line.h  MonotonePartition.cpp  Plane.h  Point.h  Polygon.h  PolygonDCEL.h  Triangulation.cpp  Triangulation.h  Vector.cpp  Vector.h  build.sh  main.cpp
chartwizard/: CMakeLists.txt  ChartWizard.cpp  ChartWizard.h  Section.cpp  Section.h  ViewChartWizard.cpp  ViewChartWizard.h  main.cpp  utils.h
cmake_openmp_demo/: CMakeLists.txt  gencsv.py  m41.cpp  m42.cpp  m43.cpp  m61.cpp  m62.cpp  main.cpp  main_filter.cpp  output.csv  tree1.cpp  tree2.cpp
cpw/: CMakeLists.txt  CellEntry.h  ModelCellProfile.cpp  ModelCellProfile.h  ViewMainWindow.cpp  ViewMainWindow.h  gen_profile.cpp  lcMainWindow.cpp  lcMainWindow.h  main.cpp  test.cellprofile
cudaPractice/: common.h  l01.cu  l02.cu  l03.cu  l04.cu  l05.cu  (+7 more)
cvs/: CMakeLists.txt  LayoutCanvas.cpp  LayoutCanvas.h  MainWindow.cpp  MainWindow.h  main.cpp
gaugeSettings/: CMakeLists.txt  GaugeWidget.cpp  GaugeWidget.h  main.cpp
gl/: CMakeLists.txt  main.cpp
itp/: CMakeLists.txt  README.md  data.h  main.cpp  mainwindow.cpp  mainwindow.h  precomputed_interpolator2d.cpp  precomputed_interpolator2d.h  test.cpp  test.py
lcDoc/: CMakeLists.txt  ModelMdReader.cpp  ModelMdReader.h  ViewManual.h  doc.tgz  lcDoc.cpp  lcDoc.h  main.cpp  test1.yaml
lcDoc/doc/: README.html
lcDoc/doc/L1/: L1.html
lcDoc/doc/L1/L12/: L12.html
lcDoc/doc/L1/L12/L13/: L13.html  L13.md
lcDoc/doc/L2/: L2.html
lcDoc/doc/L3/: L3.html
lcDoc/doc/L3/L31/: L31.html
movaGon/: CMakeLists.txt  main.cpp
mpi_demo/: CMakeLists.txt  build.sh  m2.cpp  m3.cpp  m4.cpp  m5.cpp  m6.cpp  m7.cpp  m8.cpp  m9.cpp
polygontest/: CMakeLists.txt  hexagonitem.cpp  hexagonitem.h  mainwindow.cpp  mainwindow.h
pp/: CMakeLists.txt  ModelTreeGen.cpp  ModelTreeGen.h  it.cpp  main.cpp  mtra.cpp  mtra2.cpp  qq.cpp  ra.cpp  ra.h  stra.cpp  wid.cpp
prototest/: CMakeLists.txt  addressbook.proto  build.sh  compile.sh  events.out.tfevents.1737288503.2637d176b088.603.0.v2  read.py  reader.cpp  readtfe.cpp  test  train.py  writer.cpp
prototest/include/: addressbook.pb.cc  addressbook.pb.h
prototest/logs/validation/: events.out.tfevents.1737293274.justin126-VirtualBox.24119.1.v2
qcpplayground/: CMakeLists.txt  ViewLyrRender.h  ViewYmlDisplay.cpp  ViewYmlDisplay.h  main.cpp
qpainter/: CMakeLists.txt  MainWidget.h  MyWidget.h  main.cpp
restoreFrameWork/: CMakeLists.txt  main.cpp
ska/: CMakeLists.txt  ModelSDK.cpp  ModelSDK.h  ModelSktBase.cpp  ModelSktBase.h  ModelSktClnt.h  ModelSktMsg.cpp  ModelSktMsg.h  ModelSktSvr.cpp  ModelSktSvr.h  ReqestCtx.h  RequestCtx.h  SvrCtMake.cpp  SvrCtMake.h  SvrShutdown.cpp  SvrShutdown.h  TestWidget.cpp  TestWidget.h  build.sh  lcSDK.cpp  lcSDK.h  main.cpp
socket/: CMakeLists.txt  main.cpp  socket_client.cpp  socket_server.cpp
tProf/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ModelProfTree.cpp  ModelProfTree.h  ViewProfTreeItem.cpp  ViewProfTreeItem.h  clnt.txt  main.cpp
tableDialog/: CMakeLists.txt  CustomTableWidget.cpp  CustomTableWidget.h  CustomTableWidgetItem.h  ViewColEdit.cpp  ViewColEdit.h  ViewTableDialog.cpp  ViewTableDialog.h  gaugeTreeWidget.cpp  hoverListWidgetCursor.cpp  main.cpp  table.cpp  toolbtns.cpp  treeSetting.cpp
tb/: CMakeLists.txt  ModelCrypto.cpp  ModelCrypto.h  ModelTfParser.cpp  ModelTfParser.h  PropsSection.cpp  PropsSection.h  ViewLineChartSection.cpp  ViewLineChartSection.h  ViewTensorBoard.cpp  ViewTensorBoard.h  ViewTimeSeries.cpp  ViewTimeSeries.h  ende.cpp  endec.cpp  gen.py  lcTensorBoard.cpp  lcTensorBoard.h  main  main.cpp  reader.cpp  test.enc  test.py  tfwrite.cpp  utils.cpp  utils.h
tb/logs/example/: events.out.tfevents.1737215224.justin126-VirtualBox.3681.0.v2  events.out.tfevents.1737215448.justin126-VirtualBox.4347.0.v2
tb/logs/simple_example/: events.out.tfevents.1737215508.justin126-VirtualBox.4470.0.v2
tb/logs/train/: events.out.tfevents.1737293120.justin126-VirtualBox.24119.0.v2
tb/pyso/: setup.py  test.py
tb/pyso/src/: libtest.pyx
tb/pyso/src/layer1/: layer1.py
tb/pyso/src/layer2/: layer2.py
tb/pyso/src/layer3/: layer3.py
testdb/: CMakeLists.txt  main copy.cpp  main.cpp
tm/: CMakeLists.txt  ProcessList.h  code_7531_usage.txt  gnome-keyring-d_2000_memory_usage.txt  gnome-session-b_2029_usage.txt  main.cpp  test.cpp
treeTest/: CMakeLists.txt  main.cpp  tree.h  treeWidget.cpp  treeWidget.h
(+85 files in other folders)
